--- a/foundry.toml
+++ b/foundry.toml
@@ -1,5 +1,5 @@
 [profile.default]
-solc-version = '0.8.22'
+solc-version = '0.8.30'
 src = 'contracts'
 out = 'out'
 test = 'test/foundry'
@@ -7,6 +7,7 @@ cache_path = 'cache/foundry'
 verbosity = 3
 optimizer = true
 optimizer_runs = 20_000
+via_ir = true
 
 libs = [
     # We provide a set of useful contract utilities
